--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url = jdbc:mysql://localhost:3306/bdalumnos?useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.url = jdbc:mysql://localhost:3306/alumnoshibernate?useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username = root
 spring.datasource.password = 
 ## Hibernate Properties
